<?xml version="1.0" encoding="UTF-8"?>
<!--
   STS PARENT POM
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.cloudfoundry.ide.eclipse.server</groupId>
  <artifactId>org.cloudfoundry.ide.eclipse.server.parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <scm>
    <connection>scm:git:ssh://git.springsource.com:sts/cloudfoundry-plugins.git</connection>
    <developerConnection>scm:git:ssh://git.springsource.com:sts/cloudfoundry-plugins.git</developerConnection>
    <tag>HEAD</tag>
    <url>http://git.springsource.com/sts/sts</url>
  </scm>

  <modules>
    <module>org.cloudfoundry.ide.eclipse.server</module>
    <module>org.cloudfoundry.ide.eclipse.server.core</module>
    <module>org.cloudfoundry.ide.eclipse.server.rse</module>
    <module>org.cloudfoundry.ide.eclipse.server.tests</module>
    <module>org.cloudfoundry.ide.eclipse.server.ui</module>
    <module>org.cloudfoundry.ide.eclipse.server.branding</module>
    <module>org.cloudfoundry.ide.eclipse.server.site</module>
    <module>org.cloudfoundry.ide.eclipse.server.target</module>
  </modules>

  <!-- Common Configuration -->
  <organization>
    <name>SpringSource, a division of VMware, Inc.</name>
    <url>http://springsource.com</url>
  </organization>
  <url>http://www.springsource.com/developer/sts</url>
  <inceptionYear>2007</inceptionYear>

  <prerequisites>
    <maven>3.0</maven>
  </prerequisites>

  <issueManagement>
    <url>https://issuetracker.springsource.com/browse/STS</url>
    <system>JIRA</system>
  </issueManagement>

  <ciManagement>
    <url>https://build.springsource.com/browse/STS</url>
    <system>BAMBOO</system>
  </ciManagement>

  <properties>
    <!-- CloudFloundry Properties -->
    <p2.qualifier>SNAPSHOT</p2.qualifier>
    <p2.sign>false</p2.sign>
    <p2.repository.name>Cloud Foundry Integration for Eclipse</p2.repository.name>

    <dist.name>Cloud Foundry Integration for Eclipse</dist.name>
    <dist.project>cloudfoundry</dist.project>
    <dist.key>TOOLS</dist.key>
    <dist.target.classifier>cloudfoundry-${dist.target}</dist.target.classifier>

    <!-- Common Properties -->
    <dist.type>snapshot</dist.type>
    <dist.bucket>dist.springsource.com</dist.bucket>
    <dist.platform.name></dist.platform.name>
    <dist.platform.version></dist.platform.version>		
    <dist.platform.id></dist.platform.id>		
    <dist.target></dist.target>
    <dist.properties>dist.properties</dist.properties>

    <skip.source.check>true</skip.source.check>

    <test.vmargs>${test.osvmargs}</test.vmargs>
    <test.osvmargs></test.osvmargs>
    <test.useUIThread>true</test.useUIThread>
    <test.skip>${maven.test.skip}</test.skip>

    <tycho-version>0.14.0</tycho-version>

    <maven.test.error.ignore>true</maven.test.error.ignore>
    <maven.test.failure.ignore>true</maven.test.failure.ignore>
    <maven.compiler.source>1.5</maven.compiler.source>
    <maven.compiler.target>1.5</maven.compiler.target>
    <encoding>UTF-8</encoding>
  </properties>

  <profiles>
    <profile>
      <id>e36</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <dist.target>e3.6</dist.target>
        <dist.platform.name>Helios</dist.platform.name>
        <dist.platform.id>helios</dist.platform.id>		
        <dist.platform.version>3.6</dist.platform.version>
        <package.qualifierPrefix>e36</package.qualifierPrefix>
        <version.weaving>1.0.0.R3_6_2</version.weaving>
      </properties>
    </profile>
    <profile>
      <id>build.springsource.com</id>
      <activation>
        <property>
          <name>bamboo.buildNumber</name>
        </property>
      </activation>
      <properties>
        <test.vmargs>-Dhttp.proxyHost=proxy.eng.vmware.com -Dhttp.proxyPort=3128 -Dhttps.proxyHost=proxy.eng.vmware.com -Dhttps.proxyPort=3128 ${test.osvmargs}</test.vmargs>
        <p2.qualifier>CI-B${bamboo.buildNumber}</p2.qualifier>
        <p2.replaceQualifier>true</p2.replaceQualifier>
      </properties>
    </profile>
    <profile>
      <id>osx</id>
      <activation>
        <property>
          <name>java.vendor.url</name>
          <value>http://www.apple.com/</value>
        </property>
      </activation>
      <properties>
        <test.osvmargs>-Dosgi.ws=cocoa -XstartOnFirstThread</test.osvmargs>
      </properties>
    </profile>
  </profiles>

  <repositories>
    <!-- required for Maven and Ant AWS dependency -->
    <repository>
      <id>springsource-maven-release</id>
      <name>SpringSource Maven Release Repository</name>
      <url>http://repository.springsource.com/maven/bundles/release</url>
    </repository>
    <!-- required for commons-cli dependency in c.s.sts.grails.core -->
    <repository>
      <id>apache-release</id>
      <url>https://repository.apache.org/content/repositories/releases/</url>
    </repository>
    <repository>
      <id>maven-mirror</id>
      <url>http://repo.exist.com/maven2</url>
    </repository>
  </repositories>
  
  <pluginRepositories>
    <!-- required for Maven and Ant AWS dependency -->
    <pluginRepository>
      <id>spring-maven-release</id>
      <name>Spring Maven Release Repository</name>
      <url>http://maven.springframework.org/release</url>
    </pluginRepository>
    <pluginRepository>
      <id>springsource-maven-release</id>
      <name>SpringSource Maven Release Repository</name>
      <url>http://repository.springsource.com/maven/bundles/release</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <extensions>
      <extension>
        <groupId>org.springframework.build.aws</groupId>
        <artifactId>org.springframework.build.aws.maven</artifactId>
        <version>3.1.0.RELEASE</version>
      </extension>
    </extensions>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.1.1</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>git</executable>
          <arguments>
            <argument>log</argument>
            <argument>--pretty=format:source.control.id=%H</argument>
            <argument>-n1</argument>
          </arguments>
          <outputFile>${project.build.directory}/git.properties</outputFile>
          <successCodes>
            <successCode>0</successCode>
            <successCode>1</successCode>
            <successCode>127</successCode>
            <successCode>128</successCode>
          </successCodes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>properties-maven-plugin</artifactId>
        <version>1.0-alpha-2</version>
        <executions>
          <execution>
            <phase>initialize</phase>
            <goals>
              <goal>read-project-properties</goal>
            </goals>
            <configuration>
              <files>
                <file>${project.build.directory}/git.properties</file>
              </files>
              <!-- do not fail if properties file does not exist to support, required to build eclipse-repository projects -->
              <quiet>true</quiet>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <resolver>p2</resolver>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>target-platform-configuration</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <resolver>p2</resolver>
            <target>
              <artifact>
                <groupId>org.cloudfoundry.ide.eclipse.server</groupId>
                <artifactId>org.cloudfoundry.ide.eclipse.server.target</artifactId>
                <version>1.0.0-SNAPSHOT</version>
                <classifier>${dist.target.classifier}</classifier>
              </artifact>
            </target>
            <pomDependencies>consider</pomDependencies>
            <ignoreTychoRepositories>true</ignoreTychoRepositories>
            <environments>
              <environment>
                <os>macosx</os>
                <ws>cocoa</ws>
                <arch>x86</arch>
              </environment>
              <environment>
                <os>macosx</os>
                <ws>cocoa</ws>
                <arch>x86_64</arch>
              </environment>
              <environment>
                <os>win32</os>
                <ws>win32</ws>
                <arch>x86</arch>
              </environment>
              <environment>
                <os>win32</os>
                <ws>win32</ws>
                <arch>x86_64</arch>
              </environment>
              <environment>
                <os>linux</os>
                <ws>gtk</ws>
                <arch>x86</arch>
              </environment>
              <environment>
                <os>linux</os>
                <ws>gtk</ws>
                <arch>x86_64</arch>
              </environment>
            </environments>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-packaging-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <format>yyyyMMddHHmm-'${p2.qualifier}'</format>
            <archiveSite>true</archiveSite>
            <archive>
              <manifestEntries>
                <Source-Control-Identifier>${source.control.id}</Source-Control-Identifier>
              </manifestEntries>
              <addMavenDescriptor>false</addMavenDescriptor>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.4.3</version>
          <configuration>
            <encoding>ISO-8859-1</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.6</version>
          <dependencies>  
            <dependency>  
              <groupId>ant-contrib</groupId>  
              <artifactId>ant-contrib</artifactId>  
              <version>1.0b3</version>  
              <exclusions>  
                <exclusion>  
                  <groupId>ant</groupId>  
                  <artifactId>ant</artifactId>  
                </exclusion>  
              </exclusions>  
            </dependency>  
            <dependency>  
              <groupId>org.apache.ant</groupId>  
              <artifactId>ant-nodeps</artifactId>  
              <version>1.8.1</version>  
            </dependency>  
            <dependency>
              <groupId>org.springframework.build</groupId>
              <artifactId>org.springframework.build.aws.ant</artifactId>
              <version>3.0.6.RELEASE</version>
            </dependency>
            <dependency>
              <groupId>net.java.dev.jets3t</groupId>
              <artifactId>jets3t</artifactId>
              <version>0.8.1</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>findbugs-maven-plugin</artifactId>
          <version>2.3.2</version>
          <configuration>
            <findbugsXmlOutput>true</findbugsXmlOutput>
            <failOnError>false</failOnError>
            <skip>${skip.source.check}</skip>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>2.5</version>
          <configuration>
            <sourceEncoding>utf-8</sourceEncoding>
            <minimumTokens>100</minimumTokens>
            <targetJdk>1.5</targetJdk>
            <format>xml</format>
            <failOnViolation>false</failOnViolation>
            <skip>${skip-source-check}</skip>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>cpd-check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <skip>${test.skip}</skip> 
            <useUIThread>${test.useUIThread}</useUIThread>
            <useUIHarness>true</useUIHarness>
            <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
            <showEclipseLog>true</showEclipseLog>
            <testSuite>${project.artifactId}</testSuite>
            <testClass>${test.class}</testClass>
            <argLine>
              -Xmx1024m -XX:MaxPermSize=256m -Djava.io.tmpdir=${project.build.directory} -Duser.home=${project.build.directory} ${test.vmargs}
            </argLine>
            <appArgLine>
              -eclipse.keyring ${project.build.directory}/keystore -eclipse.password ${project.build.directory}/keystore.password
            </appArgLine>
            <dependencies>
              <dependency>
                <type>p2-installable-unit</type>
                <artifactId>org.eclipse.wst.server_ui.feature.feature.group</artifactId>
                <version>0.0.0</version>
              </dependency>
              <dependency>
                <type>p2-installable-unit</type>
                <artifactId>org.eclipse.jst.web_ui.feature.feature.group</artifactId>
                <version>0.0.0</version>
              </dependency>
              <dependency>
                <type>p2-installable-unit</type>
                <artifactId>org.eclipse.jst.enterprise_ui.feature.feature.group</artifactId>
                <version>0.0.0</version>
              </dependency>
            </dependencies>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
